--- a/Data_Science_Day_1_Exercises-Day1- Homework.ipynb
+++ b/Data_Science_Day_1_Exercises-Day1- Homework.ipynb
@@ -203,23 +203,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def better_pos(category):\n",
-    "    if category not in FIELDS:\n",
-    "        return f'Sorry {category} is not a correct category, please input a correct category'\n",
-    "    players = [name.decode('utf-8') for name in sox21['Name']]\n",
-    "    positions = [pos.decode('utf-8') for pos in sox21['Pos']]\n",
-    "    category = sox21[category]\n",
-    "    zipped_values = list(zip(players, positions, category))\n",
+    "\n",
+    "# Brian's showcase\n",
+    "# def better_pos(category):\n",
+    "#     if category not in FIELDS:\n",
+    "#         return f'Sorry {category} is not a correct category, please input a correct category'\n",
+    "#     players = [name.decode('utf-8') for name in sox21['Name']]\n",
+    "#     positions = [pos.decode('utf-8') for pos in sox21['Pos']]\n",
+    "#     category = sox21[category]\n",
+    "#     zipped_values = list(zip(players, positions, category))\n",
     "    \n",
-    "    infielders = np.array(list(filter(lambda x: x[1] in {'C', '1B', '2B', 'SS', '3B', 'MI'}, zipped_values)))\n",
-    "    outfielders = np.array(list(filter(lambda x: x[1] in {'LF', 'CF', 'RF', 'OF'}, zipped_values)\n",
+    "#     infielders = np.array(list(filter(lambda x: x[1] in {'C', '1B', '2B', 'SS', '3B', 'MI'}, zipped_values)))\n",
+    "#     outfielders = np.array(list(filter(lambda x: x[1] in {'LF', 'CF', 'RF', 'OF'}, zipped_values)\n",
     "                                \n",
-    "    infield_avg = sum(infielders[:, 2].astype(float))/len(infielders[:,2])\n",
-    "    outfield_avg = sum(outfielders[:, 2].astype(float))/len(outfielders[:,2])\n",
-    "    if infield_avg > outfield_avg:\n",
-    "        pos_group = 'infielders'\n",
-    "        higher_avg = infield_avg\n",
-    "    else:\n",
+    "#     infield_avg = sum(infielders[:, 2].astype(float))/len(infielders[:,2])\n",
+    "#     outfield_avg = sum(outfielders[:, 2].astype(float))/len(outfielders[:,2])\n",
+    "#     if infield_avg > outfield_avg:\n",
+    "#         pos_group = 'infielders'\n",
+    "#         higher_avg = infield_avg\n",
+    "#     else:\n",
     "        \n",
     "                                "
    ]
